[gd_scene load_steps=6 format=2]

[ext_resource path="res://material_maker/widgets/size_option_button/size_option_button.gd" type="Script" id=1]
[ext_resource path="res://material_maker/windows/new_painter/new_painter.gd" type="Script" id=2]
[ext_resource path="res://material_maker/tools/obj_loader/obj_loader.gd" type="Script" id=3]

[sub_resource type="BoxMesh" id=1]

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 10 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="NewPainterWindow" type="Window"]
offset_right = 520.0
offset_bottom = 288.0
custom_minimum_size = Vector2( 400, 250 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "New paint project"
resizable = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 400, 250 )

[node name="Main" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 520.0
offset_bottom = 256.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Main"]
offset_right = 157.0
offset_bottom = 256.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Main/VBoxContainer"]
offset_right = 157.0
offset_bottom = 68.0
columns = 2

[node name="ModelFileLabel" type="Label" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_top = 3.0
offset_right = 72.0
offset_bottom = 17.0
text = "Model:"

[node name="ModelFile" type="Button" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_left = 76.0
offset_right = 157.0
offset_bottom = 20.0
text = "Model file"
clip_text = true

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_top = 27.0
offset_right = 72.0
offset_bottom = 41.0
text = "Resolution:"

[node name="Resolution" type="OptionButton" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_left = 76.0
offset_top = 24.0
offset_right = 157.0
offset_bottom = 44.0
script = ExtResource( 1 )
min_size = 8
max_size = 12

[node name="ProjectFileLabel2" type="Label" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_top = 51.0
offset_right = 72.0
offset_bottom = 65.0
text = "Project:"

[node name="ProjectFile" type="Button" parent="VBoxContainer/Main/VBoxContainer/GridContainer"]
offset_left = 76.0
offset_top = 48.0
offset_right = 157.0
offset_bottom = 68.0
text = "Project file"
clip_text = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Main"]
offset_left = 161.0
offset_right = 520.0
offset_bottom = 256.0
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Main/SubViewportContainer"]
size = Vector2( 359, 256 )
handle_input_locally = false
render_target_update_mode = 0

[node name="MeshPivot" type="Node3D" parent="VBoxContainer/Main/SubViewportContainer/SubViewport"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="VBoxContainer/Main/SubViewportContainer/SubViewport/MeshPivot"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Main/SubViewportContainer/SubViewport"]
autoplay = "rotate"
anims/rotate = SubResource( 2 )

[node name="CameraPivot" type="Node3D" parent="VBoxContainer/Main/SubViewportContainer/SubViewport"]
transform = Transform3D( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/Main/SubViewportContainer/SubViewport/CameraPivot"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
far = 50.0

[node name="Error" type="Label" parent="VBoxContainer/Main/SubViewportContainer"]
offset_left = 3.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 260.0
offset_right = 520.0
offset_bottom = 264.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 203.0
offset_top = 268.0
offset_right = 317.0
offset_bottom = 288.0
size_flags_horizontal = 4

[node name="OK" type="Button" parent="VBoxContainer/Buttons"]
offset_right = 55.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 55, 0 )
disabled = true
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/Buttons"]
offset_left = 59.0
offset_right = 114.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 55, 0 )
text = "Cancel"

[node name="ObjLoader" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="popup_hide" from="." to="." method="_on_NewPainterWindow_popup_hide"]
[connection signal="pressed" from="VBoxContainer/Main/VBoxContainer/GridContainer/ModelFile" to="." method="_on_ModelFile_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/VBoxContainer/GridContainer/ProjectFile" to="." method="_on_ProjectFile_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
